[package]
name = "sheeve"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "GPL-3.0-or-later"
description = "Generates sheep related names for eve online ships"
readme = "README.md"
homepage = "https://github.com/PlexSheep/sheeve"
repository = "https://github.com/PlexSheep/sheeve"
keywords = ["cli", "stupid", "name-generator"]


[dependencies]
etcetera = "0.11.0"
getopts = "0.2.24"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
